content was going passed clue footer on smaller screen size so added margins and now fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,13 @@ body{
   margin: 0;
   background-color: black;
   color: #FFFFFF;
+
 }
+
+main {
+  margin-bottom: 100%;
+}
+
 
 #menuToggler {
   position: fixed;
@@ -76,7 +82,7 @@ section {
 p {
   text-align: center;
   padding: 0.25em;
-  font-size: 20px;
+
 
 }
 h1 {
@@ -90,7 +96,7 @@ a {
   padding: 0.1em;
   font-weight: bold;
   text-decoration: none;
-  
+
 }
 
 ul, li {
@@ -98,9 +104,11 @@ ul, li {
   padding: 0.25em;
   text-align: center;
   list-style-position: inside;
-  font-size: 20px;
+
 
 }
+
+
 
 .index-images{
   width: 30vw;
@@ -118,7 +126,7 @@ ul, li {
   color: black;
   position: static;
   overflow: auto;
-  font-size: 25px;
+
 }
 
 .sub-title {
@@ -151,13 +159,15 @@ ul, li {
 .FOOGLE {
   display: flex;
   justify-content: center;
+
 }
 
 .FOOGLE span {
-  font-size: 25px;
   text-transform: uppercase;
   font-weight: bold;
   padding: 0.2em;
+  font-size: large;
+
 }
 
 
@@ -195,10 +205,8 @@ span:nth-child(6)
 }
 
 .clue span{
-  font-size: 1em;
   opacity:0;
   transition: 0.5s;
-
 }
 
 .clue:hover span  {
@@ -209,7 +217,7 @@ span:nth-child(6)
 .bar {
   position: relative;
   width: 250px;
-  height: 350px;
+  height: 250px;
   justify-self: center;
   padding: 0.5em;
 }
@@ -218,6 +226,7 @@ span:nth-child(6)
   width: 100%;
   min-height: 200px;
   object-fit: contain;
+
 }
 
 @keyframes db_title {
@@ -257,8 +266,6 @@ span:nth-child(6)
     min-width: 10vw;
     height: 350px;
     justify-self: center;
-
-
   }
 
   .card .front, .card .back {
@@ -284,7 +291,6 @@ span:nth-child(6)
   .card .back, .card:hover .front {
     transform: rotateY(180deg);
     z-index: 1;
-
   }
 
   .card:hover .front, .card:hover .back {
@@ -295,4 +301,13 @@ span:nth-child(6)
     display: None;
     justify-content: center;
   }
+
+  main {
+    margin-bottom: 0;
+  }
+
+
+
+
+
 }
